--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -38,7 +38,6 @@
 
             <StackPanel>
                 <TextBlock Text="Consolidación de Datos" Style="{StaticResource TitleTextBlockStyle}" FontSize="24" FontWeight="SemiBold"/>
-
                 <StackPanel Orientation="Horizontal" Spacing="10" Margin="0,12,0,0">
                     <Button x:Name="BtnConfig" Content="Configuración" Tag="Config" Click="Tab_Click" Width="120"/>
                     <Button x:Name="BtnPreview" Content="Vista Previa" Tag="Preview" Click="Tab_Click" Width="120"/>
@@ -53,7 +52,6 @@
         </Grid>
 
         <Grid Grid.Row="2" Padding="24,0,24,12">
-
             <Grid x:Name="ConfigPanel" ColumnSpacing="24" VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="320"/>
@@ -164,39 +162,89 @@
                                       SelectionMode="None">
                                 <ListView.ItemTemplate>
                                     <DataTemplate x:DataType="models:ColumnItem">
-                                        <Grid Padding="8,6" Background="Transparent">
+                                        <Grid Padding="8,6" Background="{x:Bind RowBackground, Mode=OneWay}" CornerRadius="4" Margin="0,2">
+
                                             <Grid.ContextFlyout>
                                                 <MenuFlyout>
-                                                    <MenuFlyoutItem Text="Fijar como Destino" Icon="Pin" Command="{Binding ElementName=RootWindow, Path=ViewModel.SetAsTargetCommand}" CommandParameter="{Binding}"/>
+                                                    <MenuFlyoutItem Text="Renombrar Columna" Icon="Edit" Command="{Binding ElementName=RootWindow, Path=ViewModel.StartRenamingCommand}" CommandParameter="{Binding}"/>
                                                     <MenuFlyoutSeparator/>
-                                                    <MenuFlyoutItem Text="Unir a Destino" Icon="Link" Command="{Binding ElementName=RootWindow, Path=ViewModel.MergeIntoTargetCommand}" CommandParameter="{Binding}"/>
+                                                    <MenuFlyoutItem Text="Fijar como Destino" Icon="Pin" Command="{Binding ElementName=RootWindow, Path=ViewModel.SetAsTargetCommand}" CommandParameter="{Binding}"/>
+                                                    <MenuFlyoutItem Text="Cancelar Selección" Icon="Cancel" Command="{Binding ElementName=RootWindow, Path=ViewModel.SetAsTargetCommand}" CommandParameter="{Binding}" Visibility="{x:Bind IsTargetMode, Mode=OneWay}"/>
                                                 </MenuFlyout>
                                             </Grid.ContextFlyout>
+
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="Auto"/>
                                                 <ColumnDefinition Width="*"/>
                                                 <ColumnDefinition Width="Auto"/>
                                                 <ColumnDefinition Width="Auto"/>
                                             </Grid.ColumnDefinitions>
+
                                             <CheckBox IsChecked="{x:Bind IsSelected, Mode=TwoWay}" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,12,0"/>
-                                            <StackPanel Grid.Column="1" VerticalAlignment="Center">
-                                                <TextBlock Text="{x:Bind HeaderName}" Visibility="{x:Bind FileVisibility, Mode=OneWay}" FontWeight="SemiBold" FontSize="14" TextTrimming="CharacterEllipsis"/>
-                                                <TextBlock Text="{x:Bind SourceInfo, Mode=OneWay}" Visibility="{x:Bind FileVisibility, Mode=OneWay}" FontSize="11" Opacity="0.5"/>
-                                                <Grid Visibility="{x:Bind CustomVisibility, Mode=OneWay}" ColumnSpacing="8">
+
+                                            <StackPanel Grid.Column="1" VerticalAlignment="Center" Spacing="2">
+                                                <StackPanel Orientation="Horizontal" Spacing="8" Visibility="{x:Bind IsTargetMode, Mode=OneWay}">
+                                                    <FontIcon Glyph="&#xE718;" FontSize="12" Foreground="{ThemeResource SystemAccentColor}"/>
+                                                    <TextBlock Text="COLUMNA DESTINO" FontSize="10" Foreground="{ThemeResource SystemAccentColor}" FontWeight="Bold"/>
+                                                </StackPanel>
+
+                                                <Grid Visibility="{x:Bind NameReadVisibility, Mode=OneWay}">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="*"/>
-                                                        <ColumnDefinition Width="120"/>
+                                                        <ColumnDefinition Width="Auto"/>
                                                     </Grid.ColumnDefinitions>
-                                                    <TextBox Text="{x:Bind HeaderName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" PlaceholderText="Nombre Columna"/>
-                                                    <TextBox Grid.Column="1" Text="{x:Bind DefaultValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" PlaceholderText="Valor Fijo"/>
+
+                                                    <StackPanel>
+                                                        <TextBlock Text="{x:Bind HeaderName}" FontWeight="SemiBold" FontSize="14" TextTrimming="CharacterEllipsis"/>
+                                                        <TextBlock Text="{x:Bind SourceInfo, Mode=OneWay}" FontSize="11" Opacity="0.5"/>
+                                                        <TextBlock Text="{x:Bind DefaultValue}" Visibility="{x:Bind CustomVisibility, Mode=OneWay}" FontSize="11" Foreground="{ThemeResource SystemAccentColor}" Opacity="0.8"/>
+                                                    </StackPanel>
+
+                                                    <Button Grid.Column="1" Command="{Binding ElementName=RootWindow, Path=ViewModel.StartRenamingCommand}" CommandParameter="{Binding}"
+                                                            Background="Transparent" BorderThickness="0" Padding="6" Margin="4,0,0,0" ToolTipService.ToolTip="Renombrar Columna">
+                                                        <FontIcon Glyph="&#xE70F;" FontSize="12" Opacity="0.4"/>
+                                                    </Button>
+                                                </Grid>
+
+                                                <Grid Visibility="{x:Bind NameEditVisibility, Mode=OneWay}" ColumnSpacing="8">
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="*"/>
+                                                        <ColumnDefinition Width="Auto"/>
+                                                    </Grid.ColumnDefinitions>
+
+                                                    <StackPanel Spacing="4">
+                                                        <TextBox Text="{x:Bind HeaderName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" PlaceholderText="Nombre de Columna"/>
+                                                        <TextBox Text="{x:Bind DefaultValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Visibility="{x:Bind CustomVisibility, Mode=OneWay}" PlaceholderText="Valor Fijo (Relleno)"/>
+                                                    </StackPanel>
+
+                                                    <Button Grid.Column="1" Command="{Binding ElementName=RootWindow, Path=ViewModel.FinishRenamingCommand}" CommandParameter="{Binding}"
+                                                            Style="{StaticResource AccentButtonStyle}" Padding="8" ToolTipService.ToolTip="Guardar Nombre">
+                                                        <SymbolIcon Symbol="Accept"/>
+                                                    </Button>
                                                 </Grid>
                                             </StackPanel>
+
                                             <Grid Grid.Column="2" Margin="12,0,4,0" Padding="8" Background="Transparent" PointerPressed="Handle_PointerPressed" PointerReleased="Handle_PointerReleased" PointerCanceled="Handle_PointerReleased" local:CursorHelper.Cursor="SizeAll">
                                                 <FontIcon Glyph="&#xE700;" FontFamily="Segoe MDL2 Assets" Opacity="0.4" FontSize="12"/>
                                             </Grid>
-                                            <Button Grid.Column="3" Visibility="{x:Bind CustomVisibility, Mode=OneWay}" Command="{Binding ElementName=RootWindow, Path=ViewModel.RemoveColumnCommand}" CommandParameter="{Binding}" Background="Transparent" BorderThickness="0" Padding="8">
-                                                <SymbolIcon Symbol="Delete" Foreground="#FF5555"/>
-                                            </Button>
+
+                                            <StackPanel Grid.Column="3" Orientation="Horizontal">
+                                                <Button Command="{Binding ElementName=RootWindow, Path=ViewModel.MergeIntoTargetCommand}" 
+                                                        CommandParameter="{Binding}" 
+                                                        Visibility="{x:Bind MergeButtonVisibility, Mode=OneWay}"
+                                                        Background="{ThemeResource SystemAccentColor}" Foreground="White"
+                                                        BorderThickness="0" Padding="8" Margin="0,0,4,0"
+                                                        ToolTipService.ToolTip="Unir a la columna Destino seleccionada">
+                                                    <StackPanel Orientation="Horizontal" Spacing="6">
+                                                        <SymbolIcon Symbol="Link"/>
+                                                        <TextBlock Text="Unir"/>
+                                                    </StackPanel>
+                                                </Button>
+
+                                                <Button Visibility="{x:Bind DeleteButtonVisibility, Mode=OneWay}" Command="{Binding ElementName=RootWindow, Path=ViewModel.RemoveColumnCommand}" CommandParameter="{Binding}" Background="Transparent" BorderThickness="0" Padding="8">
+                                                    <SymbolIcon Symbol="Delete" Foreground="#FF5555"/>
+                                                </Button>
+                                            </StackPanel>
                                         </Grid>
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
