--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -52,6 +52,7 @@
         </Grid>
 
         <Grid Grid.Row="2" Padding="24,0,24,12">
+
             <Grid x:Name="ConfigPanel" ColumnSpacing="24" VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="320"/>
@@ -196,7 +197,47 @@
 
                                                     <StackPanel>
                                                         <TextBlock Text="{x:Bind HeaderName}" FontWeight="SemiBold" FontSize="14" TextTrimming="CharacterEllipsis"/>
-                                                        <TextBlock Text="{x:Bind SourceInfo, Mode=OneWay}" FontSize="11" Opacity="0.5"/>
+
+                                                        <Button Content="{x:Bind SourceInfo, Mode=OneWay}" 
+                                                                FontSize="11" Opacity="0.5" 
+                                                                Background="Transparent" BorderThickness="0" Padding="0" Margin="0"
+                                                                Height="Auto" MinHeight="0" HorizontalAlignment="Left"
+                                                                ToolTipService.ToolTip="Clic para gestionar uniones">
+                                                            <Button.Flyout>
+                                                                <Flyout Placement="Bottom">
+                                                                    <StackPanel Width="320" Spacing="8">
+                                                                        <TextBlock Text="Fuentes unidas en esta columna:" FontWeight="Bold" Opacity="0.8"/>
+                                                                        <Border Height="1" Background="{ThemeResource SurfaceStrokeColorDefaultBrush}"/>
+
+                                                                        <ItemsControl ItemsSource="{x:Bind MappingsList, Mode=OneWay}">
+                                                                            <ItemsControl.ItemTemplate>
+                                                                                <DataTemplate>
+                                                                                    <Grid Margin="0,4">
+                                                                                        <Grid.ColumnDefinitions>
+                                                                                            <ColumnDefinition Width="*"/>
+                                                                                            <ColumnDefinition Width="Auto"/>
+                                                                                        </Grid.ColumnDefinitions>
+
+                                                                                        <StackPanel Grid.Column="0" Margin="0,0,8,0">
+                                                                                            <TextBlock Text="{Binding Key}" FontSize="10" Opacity="0.6" TextTrimming="CharacterEllipsis" ToolTipService.ToolTip="{Binding Key}"/>
+                                                                                            <TextBlock Text="{Binding Value}" FontSize="12" FontWeight="SemiBold"/>
+                                                                                        </StackPanel>
+
+                                                                                        <Button Grid.Column="1" Margin="8,0,0,0" Padding="6" Background="Transparent" BorderThickness="0"
+                                                                                                Command="{Binding ElementName=RootWindow, Path=ViewModel.DetachMappingCommand}"
+                                                                                                CommandParameter="{Binding}"
+                                                                                                ToolTipService.ToolTip="Separar esta columna">
+                                                                                            <SymbolIcon Symbol="Delete" Foreground="#FF5555"/>
+                                                                                        </Button>
+                                                                                    </Grid>
+                                                                                </DataTemplate>
+                                                                            </ItemsControl.ItemTemplate>
+                                                                        </ItemsControl>
+                                                                    </StackPanel>
+                                                                </Flyout>
+                                                            </Button.Flyout>
+                                                        </Button>
+
                                                         <TextBlock Text="{x:Bind DefaultValue}" Visibility="{x:Bind CustomVisibility, Mode=OneWay}" FontSize="11" Foreground="{ThemeResource SystemAccentColor}" Opacity="0.8"/>
                                                     </StackPanel>
 
@@ -236,7 +277,7 @@
                                                         BorderThickness="0" Padding="8" Margin="0,0,4,0"
                                                         ToolTipService.ToolTip="Unir a la columna Destino seleccionada">
                                                     <StackPanel Orientation="Horizontal" Spacing="6">
-                                                        <SymbolIcon Symbol="Link"/>
+                                                        <FontIcon Glyph="&#xE71B;" FontFamily="Segoe MDL2 Assets"/>
                                                         <TextBlock Text="Unir"/>
                                                     </StackPanel>
                                                 </Button>
